# data-access-api/open-api-specification.yml
@@ -43,19 +43,19 @@ components:
       $ref: "./open-api-application-specification.yml#/components/schemas/ApplicationSummaryResponse"
     ApplicationSummary:
       $ref: "./open-api-application-specification.yml#/components/schemas/ApplicationSummary"
-    Caseworker:
-      $ref: "./open-api-application-specification.yml#/components/schemas/Caseworker"
     CaseworkerResponse:
       $ref: "./open-api-application-specification.yml#/components/schemas/CaseworkerResponse"
+    CaseworkersResponse:
+      $ref: "./open-api-application-specification.yml#/components/schemas/CaseworkersResponse"
     CaseworkerAssignRequest:
       $ref: "./open-api-application-specification.yml#/components/schemas/CaseworkerAssignRequest"
-    ApplicationDomainEvent:
-      $ref: "./open-api-application-specification.yml#/components/schemas/ApplicationDomainEvent"
-    Paging:
-      $ref: "./open-api-application-specification.yml#/components/schemas/Paging"
+    ApplicationDomainEventResponse:
+      $ref: "./open-api-application-specification.yml#/components/schemas/ApplicationDomainEventResponse"
+    PagingResponse:
+      $ref: "./open-api-application-specification.yml#/components/schemas/PagingResponse"
     MakeDecisionRequest:
       $ref: "./open-api-application-specification.yml#/components/schemas/MakeDecisionRequest"
-    Individual:
-      $ref: "./open-api-application-specification.yml#/components/schemas/Individual"
+    IndividualResponse:
+      $ref: "./open-api-application-specification.yml#/components/schemas/IndividualResponse"
     IndividualsResponse:
       $ref: "./open-api-application-specification.yml#/components/schemas/IndividualsResponse"
